--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Don’t commit the following directories created by pub.
-build/
+# build/
 packages/
 
 # Or the files created by dart2js.
-*.dart.js
-*.dart.precompiled.js
+#*.dart.js
+#*.dart.precompiled.js
 *.js_
 *.js.deps
-*.js.map
+#*.js.map
 
 # Include when developing application packages.
 pubspec.lock
