--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Don’t commit the following directories created by pub.
 # build/
-packages/
+# packages/
+build/web/packages/$sdk/
 
 # Or the files created by dart2js.
 #*.dart.js
